apps/goatlint/src/snapshots/fixtures__cli__auto_config_detection_jsonc_debugger.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: debugger.js
working directory: fixtures/cli/auto_config_detection_jsonc
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
