apps/goatlint/src/snapshots/fixtures__cli__auto_config_parse_error_debugger.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: debugger.js
working directory: fixtures/cli/auto_config_parse_error
----------
Failed to parse goatlint configuration file.

  x Failed to parse goatlint config <cwd>/fixtures/cli/auto_config_parse_error/.goatlintrc.json.
  | expected `:` at line 2 column 11

----------
CLI result: InvalidOptionConfig
----------
