apps/goatlint/src/snapshots/fixtures__cli__disable_eslint_and_unicorn_alias_rules_-c .oxlintrc-eslint.json test.js -c .oxlintrc-unicorn.json test.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c .goatlintrc-eslint.json test.js
working directory: fixtures/cli/disable_eslint_and_unicorn_alias_rules
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 55 rules using 1 threads.
----------
CLI result: LintSucceeded
----------

########## 
arguments: -c .goatlintrc-unicorn.json test.js
working directory: fixtures/cli/disable_eslint_and_unicorn_alias_rules
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 68 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
